// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart should hide the checkout button whenthe shop is closed 1`] = `
<Cart
  handleQuantityInputChange={[MockFunction]}
  order={
    Array [
      Object {
        "id": "81211c24-51c0-46ec-b1e0-18db55880958",
        "price": "1500.00",
        "quantity": 1,
        "title": "Jollof Rice, Beef and Plantain",
      },
    ]
  }
  removeOrderItem={[MockFunction]}
>
  <div
    className="side-cart-toggle d-none-xl"
  >
    <span
      aria-hidden="true"
      id="cart-toggler"
      onClick={[Function]}
    >
      <div
        className="text-center"
      >
        <img
          alt="cart"
          src="/img/cart.png"
        />
         
         
        <sup>
          1
        </sup>
      </div>
      <p
        className="text-center"
      >
        Total: ₦
        1500
      </p>
    </span>
  </div>
  <div
    className="side-cart null"
    id="side-cart"
  >
    <div
      className="cart"
    >
      <div
        className="cart-header"
      >
        <h2>
          Your Basket
        </h2>
        <CloseIcon
          btnID="side-cart-close-icon"
          clickHandler={[Function]}
          divClass="d-none-xl"
        >
          <div
            className="close d-none-xl"
          >
            <Link
              aria-hidden="true"
              className={null}
              clickHandler={[Function]}
              dataTip={null}
              id="side-cart-close-icon"
            >
              <button
                className="link-btn null"
                data-tip={null}
                id="side-cart-close-icon"
                onClick={[Function]}
                type="button"
              >
                ×
              </button>
            </Link>
          </div>
        </CloseIcon>
      </div>
      <hr />
      <div
        className="order-summary"
      >
        <div
          key="81211c24-51c0-46ec-b1e0-18db55880958"
        >
          <p>
            <input
              className="order-input"
              min="1"
              onChange={[Function]}
              type="number"
              value={1}
            />
          </p>
          <p
            data-for="cart-tooltip"
            data-tip="Jollof Rice, Beef and Plantain"
          >
            Jollof Rice, Beef and Plantain
          </p>
          <p>
            1500.00
          </p>
          <Link
            className="remove-order"
            clickHandler={[Function]}
            data-for="cart-tooltip"
            dataTip="Remove Item?"
            id={null}
          >
            <button
              className="link-btn remove-order"
              data-tip="Remove Item?"
              id={null}
              onClick={[Function]}
              type="button"
            >
              ×
            </button>
          </Link>
          <ReactTooltip
            className="tooltip"
            clickable={false}
            effect="solid"
            id="cart-tooltip"
            insecure={true}
            place="top"
            resizeHide={true}
            type="dark"
            wrapper="div"
          >
            <div
              className="__react_component_tooltip place-top type-dark"
              data-id="tooltip"
              id="cart-tooltip"
            />
          </ReactTooltip>
        </div>
        <div
          className="order-amount"
        >
          <div>
            <p>
              Total:
            </p>
            <h2>
              ₦
              1500
            </h2>
          </div>
        </div>
      </div>
      <br />
    </div>
  </div>
</Cart>
`;

exports[`Cart should render a message when there is no order 1`] = `
<Fragment>
  <div
    className="side-cart-toggle d-none-xl"
  >
    <span
      aria-hidden="true"
      id="cart-toggler"
      onClick={[Function]}
    >
      <div
        className="text-center"
      >
        <img
          alt="cart"
          src="/img/cart.png"
        />
         
         
        <sup>
          0
        </sup>
      </div>
      <p
        className="text-center"
      >
        Total: ₦
        0
      </p>
    </span>
    <span
      className="cart-btn"
    >
      <Link
        replace={false}
        to="/order-review"
      >
        <button
          className="btn btn-pri btn-block checkout-btn"
          disabled="disabled"
          type="button"
        >
          Checkout
        </button>
      </Link>
    </span>
  </div>
  <div
    className="side-cart null"
    id="side-cart"
  >
    <div
      className="cart"
    >
      <div
        className="cart-header"
      >
        <h2>
          Your Basket
        </h2>
        <CloseIcon
          btnID="side-cart-close-icon"
          clickHandler={[Function]}
          divClass="d-none-xl"
        />
      </div>
      <hr />
      <div
        className="empty-cart"
      >
        <p>
          Your Basket is Empty
        </p>
      </div>
      <br />
      <Link
        replace={false}
        to="/order-review"
      >
        <button
          className="btn btn-pri btn-block checkout-btn"
          disabled="disabled"
          type="button"
        >
          Checkout
        </button>
      </Link>
    </div>
  </div>
</Fragment>
`;

exports[`Cart should render the Cart component correctly 1`] = `
<Fragment>
  <div
    className="side-cart-toggle d-none-xl"
  >
    <span
      aria-hidden="true"
      id="cart-toggler"
      onClick={[Function]}
    >
      <div
        className="text-center"
      >
        <img
          alt="cart"
          src="/img/cart.png"
        />
         
         
        <sup>
          1
        </sup>
      </div>
      <p
        className="text-center"
      >
        Total: ₦
        1500
      </p>
    </span>
    <span
      className="cart-btn"
    >
      <Link
        replace={false}
        to="/order-review"
      >
        <button
          className="btn btn-pri btn-block checkout-btn"
          disabled={null}
          type="button"
        >
          Checkout
        </button>
      </Link>
    </span>
  </div>
  <div
    className="side-cart null"
    id="side-cart"
  >
    <div
      className="cart"
    >
      <div
        className="cart-header"
      >
        <h2>
          Your Basket
        </h2>
        <CloseIcon
          btnID="side-cart-close-icon"
          clickHandler={[Function]}
          divClass="d-none-xl"
        />
      </div>
      <hr />
      <div
        className="order-summary"
      >
        <div
          key="81211c24-51c0-46ec-b1e0-18db55880958"
        >
          <p>
            <input
              className="order-input"
              min="1"
              onChange={[Function]}
              type="number"
              value={1}
            />
          </p>
          <p
            data-for="cart-tooltip"
            data-tip="Jollof Rice, Beef and Plantain"
          >
            Jollof Rice, Beef and Plantain
          </p>
          <p>
            1500.00
          </p>
          <Link
            className="remove-order"
            clickHandler={[Function]}
            data-for="cart-tooltip"
            dataTip="Remove Item?"
            id={null}
          >
            ×
          </Link>
          <ReactTooltip
            className="tooltip"
            clickable={false}
            effect="solid"
            id="cart-tooltip"
            insecure={true}
            place="top"
            resizeHide={true}
            type="dark"
            wrapper="div"
          />
        </div>
        <div
          className="order-amount"
        >
          <div>
            <p>
              Total:
            </p>
            <h2>
              ₦
              1500
            </h2>
          </div>
        </div>
      </div>
      <br />
      <Link
        replace={false}
        to="/order-review"
      >
        <button
          className="btn btn-pri btn-block checkout-btn"
          disabled={null}
          type="button"
        >
          Checkout
        </button>
      </Link>
    </div>
  </div>
</Fragment>
`;
